# libMetadata

./: .gitignore  CMakeLists.txt  README.en.md  README.md
include/: format.h  metadata.h  metadata.hpp  metadata_tag.h  metadatacpp.h
src/: metadata.cpp  metadata_tag_info.cpp  metadatacpp.cpp
test/: CMakeLists.txt  test.cpp
